--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "sshauth"
 version = "0.1.0"
 edition = "2021"
-license = "MPL-2.0"
+license = "MIT OR Apache-2.0"
+description = "SSH key based (agents or static files) authentication tokens"
+keywords = ["ssh", "signature", "authentication", "ssh-agent"]
 
 [dependencies]
 anyhow = "1"
@@ -14,9 +16,8 @@ p256 = "0.13"
 postcard = { version = "1", features = ["use-std"] }
 serde = { version = "1", features = ["derive"] }
 sha2 = "0.10.8"
-#signature = "2.2.0"
 slog = "2.7"
-ssh-encoding = "0.2.0"
+ssh-encoding = "0.2"
 ssh-key = { version = "0.6.4", features = ["p256", "ed25519"] }
 tokio = { version = "1", features = ["io-util", "net"] }
 
